# Nexus-E-Commerce-Platform-BE

./: PITCHME.md  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
NexusAPI/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
NexusAPI/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_product_featured.py  0004_alter_product_slug.py  0005_alter_category_slug.py  0006_alter_product_description.py  0007_alter_product_description.py  0008_cart_cartitem.py  0009_alter_cartitem_product.py  0010_alter_cartitem_cart_alter_cartitem_product_and_more.py  0011_wishlist.py  0012_order_orderitem.py
Nexus_E_Commerce_BE/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
